--- a/TestApp2.Android/Resources/layout/Main.xml
+++ b/TestApp2.Android/Resources/layout/Main.xml
@@ -17,7 +17,8 @@
             android:text="Start Recording"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/myView" />
+            android:id="@+id/myView" 
+           />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
